--- a/index.html
+++ b/index.html
@@ -289,6 +289,20 @@
             "robdksgeu57": "О Илья! Привет! Как тебе игра? Нравится?",
             "2+2": "По моим подсчётам 2+2=5.",
             "победа": "Чего?! В этой игре нельзя победить!",
+            "ачивка": "Чувак я пока не добавил достижения",
+            "достижения": "Чувак я пока не добавил достижения",
+            "плохой": "Кто?",
+            "ты": "Оу",
+            "человек": "Хм, да, я человек",
+            "cookie": "Yummy 😋",
+            "hello": "Давай на русском, ладно?",
+            "hi": "Давай на русском, ладно?",
+            "ок": ":)",
+            "да": "Отлично",
+            "нет": "Оу. Ладно.",
+            "ИИ": "Нет, я не ИИ",
+            "что": "что",
+            "расскажи_о_себе": "Решил обойти систему? Мы такое не уважаем.... Что ж... Расскажу немного. Меня зовут BoccNK, я создатель этой игры. Ещё у меня есть игра смайлик кликер. В общем-то это всё что ты должен знать обо мне.",
             "можно": "Нет! Нельзя!",
             "DeepSeek": "Да",
             "погода": "Сегодня отличная погода для программирования!",
